--- a/_posts/2020-09-28-twitter.md
+++ b/_posts/2020-09-28-twitter.md
@@ -8,7 +8,7 @@ categories: sample-posts external-services
 ---
 A sample blog page that demonstrates the inclusion of Tweets/Timelines/etc.
 
-# Tweet
+<!-- # Tweet -->
 An example of displaying a tweet:
 {% twitter https://twitter.com/rubygems/status/518821243320287232 %}
 
