--- a/assets/pdf/CV/cv.tex
+++ b/assets/pdf/CV/cv.tex
@@ -1,115 +1,148 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Medium Length Professional CV
-% LaTeX Template
-% Version 2.0 (8/5/13)
-%
-% This template has been downloaded from:
-% http://www.LaTeXTemplates.com
-%
-% Original author:
-% Trey Hunner (http://www.treyhunner.com/)
-%
-% Important note:
-% This template requires the resume.cls file to be in the same directory as the
-% .tex file. The resume.cls file provides the resume style used for structuring the
-% document.
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\documentclass[11pt,letterpaper]{article}
 
-%----------------------------------------------------------------------------------------
-%	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
-%----------------------------------------------------------------------------------------
+\usepackage{slantsc}
+\usepackage{amsfonts}
+\usepackage{amsmath}
+\usepackage{charter}
+\usepackage{enumitem}
+\usepackage{mathrsfs}
+\usepackage{pifont}
+\usepackage{bbold}
+\usepackage[dvipsnames]{xcolor}
+\usepackage[T1]{fontenc}
+\usepackage{textcomp}
+\usepackage{fancyhdr}
+\usepackage{dashrule}
+\usepackage{times}
+\usepackage[square, comma, sort&compress, numbers]{natbib}
+\usepackage[pdftex]{hyperref}
+\usepackage[utf8]{inputenc}
+\usepackage{color}
 
-\documentclass{resume} % Use the custom resume.cls style
+\newcommand{\allnotes}[1]{\textit{#1}} 
+\newcommand{\alvin}[1]{\allnotes{\textcolor{purple}{[Alvin: #1]}}}
+\newcommand{\ryan}[1]{\textcolor{blue}{#1}}
+\setlength{\paperwidth}{8.5in}
+\setlength{\hoffset}{-9.7mm}
+\setlength{\oddsidemargin}{0mm}
+\setlength{\textwidth}{184.3mm}
+\setlength{\columnsep}{6.3mm}
+\setlength{\marginparsep}{0mm}
+\setlength{\marginparwidth}{0mm}  
+\setlength{\paperheight}{11in}
+\setlength{\voffset}{-8.4mm}
+\setlength{\topmargin}{-9mm}
+\setlength{\headheight}{0mm}
+\setlength{\headsep}{3mm}
+\setlength{\topskip}{10mm}
+\setlength{\textheight}{260.2mm}
+\setlength{\footskip}{12.4mm}
+\setlength{\parindent}{1pc}
+\linespread{1}
+    
+\lfoot{}
+\cfoot{}
+\rfoot{}
+\hypersetup{colorlinks,%
+linkcolor=black,%
+urlcolor=[rgb]{0,0,0.6},%
+pdftex}
 
-\usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
+\newcommand{\myline}{\par
+  \kern3pt % space above the rules
+  \hrule height 0.8pt
+  \kern5pt % space below the rules
+}
 
-\usepackage{hyperref}
+\newenvironment{ssubtitle}{\fontfamily{ptm}\selectfont}{}
+\newcommand{\subtitle}[1]{\Large{\textsc{#1}}}
+\newenvironment{headd}{\fontfamily{put}\selectfont}{}
 
-\name{Yurun Yuan} % Your name
-\address{Western Campus, University of Science and Technology of China \\ Anhui, China} % Your address
+\begin{document}\pagestyle{empty}
+\begin{center}
+\begin{headd}{\huge\textbf{\textrm{YuRun Yuan}}}\end{headd}\\
+\normalsize
+\vspace{3pt}
+\ding{38} (+86)~152 1221 6859$|$~\ding{41} yr\_yuan@mail.ustc.edu.cn
+$|$ Homepage: \href{https://ryanyuan-yyr.github.io/}{ryanyuan-yyr.github.io}
+\end{center}
 
-\address{(+86)~152~$\cdot$~1221~$\cdot$~6859 \\ yr\_yuan@mail.ustc.edu.cn} % Your phone number and email
+\noindent
+\begin{ssubtitle}\subtitle{Education}\end{ssubtitle}
+\myline
 
-\address{\href{https://ryanyuan-yyr.github.io/}{ryanyuan-yyr.github.io} \\ \href{https://github.com/ryanyuan-yyr}{github.com/ryanyuan-yyr}}
+\noindent
+{\textbf{University of Science and Technology of China (USTC)} \hfill Hefei, China}\\
+\textit{B.S. in Computer Science with honors} \hfill Sep 2019 -- Jun 2023(expected) 
+\begin{itemize}[noitemsep, topsep=0pt, leftmargin=11pt]
+\item GPA: 3.97/4.3 (ranking 3/256)
+\item Core courses: Principles and Techniques of Compiler (100/100), Foundations of Algorithms (97/100), Operating Systems (Honors) (97/100), Computer Organization \& Design (94/100), Data Structures (95/100)
+\end{itemize}
 
-\begin{document}
+\vspace{8pt}\noindent
+\begin{ssubtitle}\subtitle{Selected Research Projects}\end{ssubtitle}
+\myline
 
-%----------------------------------------------------------------------------------------
-%	EDUCATION SECTION
-%----------------------------------------------------------------------------------------
+\noindent
+\textbf{Manage Heterogeneous Memory Hierarchy with Java Runtime} \hfill Feb 2022 - Present\\ 
+\textit{Research Intern, Advisor:} \href{http://jianh.web.engr.illinois.edu/}{\textit{Prof. Jian Huang}} \hfill {\href{http://jianh.web.engr.illinois.edu/platformx/}{PlatformX Group, UIUC}}
+\begin{itemize}[noitemsep, topsep=0pt, leftmargin=11pt]
+        \item Identified a certain object access pattern in JVM to locate frequently accessed objects
+        \item Proposed a new policy that leverages the semantic information in JVM to place objects with different access frequencies in different memories, taking advantage of low latency of fast memory and high capacity of slow memory
+        % \item \alvin{What else? Like some evaluation metrics}
+\end{itemize}
 
-\begin{rSection}{Education}
+\noindent
+\textbf{Extension of a DSL compiler for ML applications} \hfill Nov 2021 - Jan 2022\\
+\textit{Research Assistant, Advisor:} \href{http://staff.ustc.edu.cn/~chengli7/}{\textit{Prof. Cheng Li}} \hfill {\href{http://adsl.ustc.edu.cn/}{Advanced Data Systems Laboratory, USTC}}
+\begin{itemize}[noitemsep, topsep=0pt, leftmargin=11pt]
+    \item Studied popular gradient compression algorithms used in DNN training, including TernGrad and 3-LC
+    % \item Extended \texttt{CompLL}, a compiler that aims to help practitioners develop gradient compression algorithms by converting a C-like DSL code into highly-optimized CUDA C++ code, to support more language features, including loops, arrays, and an operator \texttt{prefix\_sum}.
+    \item Extended \texttt{CompLL}, a compiler that translates C-like DSL code into highly-optimized CUDA C++ code, to support more language features, including loops, arrays, and a new operator \texttt{prefix\_sum} % \alvin{Is this compiler designed only for gradient compression algorithms? If not, don't add it.}\ryan{[This compiler is actually designed only for gradient compression algorithms]}
+    \item Implemented the 3-LC algorithm in DSL with only 69 lines of code, which greatly reduces developers' burden
+\end{itemize}
 
-    {\bf University of Science and Technology of China (USTC)} \hfill {September 2019 - Present} \\
-    Major in Computer Science \\
-    GPA: 3.97/4.3 (ranking 6/252), \ Average score: 92.24/100 \\
-    Core courses: \\
-    \begin{tabular}{l@{\hspace{1ex}} @{} >{}l @{\hspace{6ex}} l l@{\hspace{1ex}} >{}l @{\hspace{6ex}} l }
-        $\cdot$ & Operating Systems (Honors)        & 97/100 &
-        $\cdot$ & Computer Organization \& Design   & 94/100   \\
-        $\cdot$ & Data Structures                   & 95/100 &
-        $\cdot$ & Introduction to Computing Systems & 95/100   \\
-        $\cdot$ & Programming (Advanced)            & 98/100 &
-        $\cdot$ & Graph Theory                      & 97/100
-    \end{tabular}
-\end{rSection}
+\vspace{8pt} \noindent
+\begin{ssubtitle}\subtitle{Selected Course Projects}\end{ssubtitle}
+\myline
 
-%----------------------------------------------------------------------------------------
-%	WORK EXPERIENCE SECTION
-%----------------------------------------------------------------------------------------
+\noindent
+\textbf{A Compiler for \texttt{cminusf}, a C-like Programming Language} \hfill Oct 2021 - Jan 2022 \\
+\textit{Principles of Compiler Design} \hfill {\href{https://github.com/ryanyuan-yyr/2021fall-compiler\_cminus}{Project Link}}
+%{\href{https://github.com/ryanyuan-yyr/2021fall-compiler\_cminus}{github.com/ryanyuan-yyr/2021fall-compiler\_cminus}}
+\begin{itemize}[noitemsep, topsep=0pt, leftmargin=11pt]
+    \item Extended the syntax of \texttt{cminusf} to support structures, class templates, member functions, and operator overloading
+    \item Implemented the lexical and semantic analysis of the compiler with \texttt{lexer} and \texttt{bison}
+    \item Led a group of 3 to build the abstract syntax tree, translate \texttt{cminusf} source code into intermediate representation, and implement machine-independent optimization(constant propagation, live-variable analysis, and loop invariant hoist) with LLVM
+\end{itemize}
 
-\begin{rSection}{Research Experience}
+\noindent
+\textbf{A Primary 5-Stage-Pipelined RISC-V CPU with FPGA} \hfill May 2021 - Jun 2021 \\
+\textit{Computer Organization \& Design} \hfill {\href{https://github.com/ryanyuan-yyr/COD-Labs}{Project Link}}
+%{\href{https://github.com/ryanyuan-yyr/COD-Labs}{github.com/ryanyuan-yyr/COD-Labs}}
+\begin{itemize}[noitemsep, topsep=0pt, leftmargin=11pt]
+        \item Implemented a pipelined CPU in \texttt{Verilog}, supporting arithmetic instructions, load/store instructions, memory mapped I/O, instruction \texttt{ecall} and interrupts
+        \item Evaluated the CPU performance in the Vivado simulator and on a real FPGA board
+\end{itemize}
 
-    \begin{rSubsection}{\href{http://adsl.ustc.edu.cn/}{Advanced Data Systems Laboratory, USTC}}{November 2021 - Present}{Research Assistant, Advisor: \href{http://staff.ustc.edu.cn/~chengli7/}{Cheng Li}}{\href{https://gitlab.com/hipress/hipress}{gitlab.com/hipress/hipress}}
+\vspace{8pt} \noindent
+\begin{ssubtitle}\subtitle{Skills \& Techniques}\end{ssubtitle}
+\myline
+\begin{itemize}[noitemsep, topsep=0pt, leftmargin=11pt]
+    \item \textit{TOEFL:} Reading 30, Listening 24, Speaking 22, Writing 29
+    \item \textit{GRE:} Verbal 152, Quantitative 170, Analytical Writing 4.0
+    \item \textit{Programming Skills:} C/C++, Python, Java, Rust, Verilog, SQL
+    \item \textit{Software Skills:} Vivado, gem5, \LaTeX, Maxine JVM
+\end{itemize}
 
-        \item Researched on gradient compression algorithms used in DNN training, including TernGrad and 3-LC.
-        \item Extended \texttt{CompLL}, a compiler that aims to help practitioners develop gradient compression algorithms by converting a DSL into highly-optimized CUDA C++ code, to support more language features, including loops, arrays, and an operator \texttt{prefix\_sum}.
-        \item Implemented algorithm 3-LC in the DSL and converted it into CUDA C++ code using the extended compiler.
-    \end{rSubsection}
+\vspace{8pt} \noindent
+\begin{ssubtitle}\subtitle{Awards \& Honors}\end{ssubtitle}
+\myline
+\begin{itemize}[noitemsep, topsep=0pt, leftmargin=11pt]
+    \item Shenzhen Stock Exchange Scholarship \hfill 2021
+    \item Scholarship for Outstanding Students (Gold award, 15/172) \hfill 2021
+    \item Hua Xia Talent Program First Prize Scholarship (12 / 254 students major in CS) \hfill 2020-2021
+\end{itemize}
 
-    %------------------------------------------------
-
-    \begin{rSubsection}{\href{https://luna.bdaa.pro/}{Team LUNA}, \href{http://bigdata.ustc.edu.cn/}{Big Data Laboratory, USTC}}{October 2021 - December 2021}{Backend Developer}{\href{https://gitlab.com/ryanyuan-yyr/luna-ailab-api}{gitlab.com/ryanyuan-yyr/luna-ailab-api}}
-        \item Studied the usage of MySQL, ORM and Flask.
-        \item Built the backend for the API website, which manages users' data in MySQL databases and provides user authentication services.
-    \end{rSubsection}
-\end{rSection}
-%----------------------------------------------------------------------------------------
-%	TECHNICAL STRENGTHS SECTION
-%----------------------------------------------------------------------------------------
-
-\begin{rSection}{Selected Course Projects}
-    \begin{rSubsection}{A Compiler for \texttt{cminiusf}, a C-like Programming Language}{October 2021 - January 2022}{Compilers Principles, prof.\href{http://staff.ustc.edu.cn/~chengli7/}{Cheng Li}}{\href{https://github.com/ryanyuan-yyr/2021fall-compiler\_cminus}{github.com/ryanyuan-yyr/2021fall-compiler\_cminus}}
-        \item Used \texttt{lexer} and \texttt{bison} to implement the lexical and semantic analysis.
-        \item Led a group of 3 to build the abstract syntax tree, translate \texttt{cminusf} source code into LLVM IR, and  implement machine independent optimization(constant propagation, live-variable analysis and loop invariant hoist) with C++.
-        \item Extended the syntax of \texttt{cminusf}, including structures, member functions, class templates and operator overloading.
-    \end{rSubsection}
-
-    \begin{rSubsection}{A Primary 5-Stage-Pipelined RISC-V CPU with FPGA}{May 2021 - June 2021}{Computer Organization \& Design, prof.\href{http://staff.ustc.edu.cn/~cswang/}{Chao Wang}}{\href{https://github.com/ryanyuan-yyr/COD-Labs}{github.com/ryanyuan-yyr/COD-Labs}}
-        \item Implemented a pipelined CPU in \texttt{Verilog}, supporting arithmetic instructions, load/store instructions, memory mapped I/O, instruction \texttt{ecall} and interrupts.
-        \item Performed stimulation and synthesis on Vivado. Programmed on the FPGA development board.
-    \end{rSubsection}
-
-    \begin{rSubsection}{Shell in Rust}{May 2021}{Operating Systems(Honors), prof.\href{http://staff.ustc.edu.cn/~kxing/}{Kai Xing}}{\href{https://github.com/ryanyuan-yyr/OSH-2021-Labs/tree/main/lab2}{github.com/ryanyuan-yyr/OSH-2021-Labs/tree/main/lab2}}
-        \item Learned about basic concepts and syntax of Rust.
-        \item Implemented a shell in Rust, supporting pipe, \texttt{SIGINT}, and I/O redirection.
-    \end{rSubsection}
-
-    \begin{rSubsection}{FAT16 in User Space}{June 2021}{Operating Systems, prof.\href{http://staff.ustc.edu.cn/~ykli/}{Yongkun Li}}{\href{https://github.com/ryanyuan-yyr/FAT-filesystem}{github.com/ryanyuan-yyr/FAT-filesystem}}
-        \item Used FUSE to implement a FAT16 filesystem on Ubuntu, supporting the creation and removal of files and directories.
-    \end{rSubsection}
-
-\end{rSection}
-
-\begin{rSection}{Miscellaneous}
-    \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-        Language           & TOEFL: 105/120. Reading 30, Listening 24, Speaking 22, Writing 29      \\
-        Awards             & Scholarship for Outstanding Students, 2020 - 2021 (Gold award, 15/172) \\
-        Programming skills & C, C++, Python, Rust, Verilog                                          \\
-        Software skills    & Vivado, \LaTeX, Visual Studio Code                                     \\
-        Volunteer work     & Mathematics tutor for high school students
-    \end{tabular}
-\end{rSection}
 
 \end{document}
